--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,23 @@
 @import 'bootstrap/scss/bootstrap';
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 12px;
 }
 
+::-webkit-scrollbar-track {
+  background-color: rgb(108, 117, 125);
+  border-left: 6px;
+  border-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color:#fff;
+  -webkit-box-shadow: inset 0 0 6px rgba(90,90,90,0.7);
+}
 .logo {
   height: 6em;
   padding: 1.5em;
